# vange-rs

./: .gitignore  Cargo.toml  README.md  gen.py
html5/: build.sh  index.html
html5-emscripten/: index.html
lib/ffi/: Cargo.toml  build.sh
lib/ffi/src/: lib.rs
lib/m3d/: Cargo.toml
res/shader/: color.inc.wgsl  surface.inc.wgsl  water.wgsl
res/shader/terrain/: ray.wgsl
res_linux/config/: settings.ron
src/: gxx_personality_v0_stub.cpp
src/config/: game.rs
src/level/: config.rs  mod.rs
src/render/: mod.rs  terrain.rs
vss/: build.sh
web/: build.sh  index.html
