[package]
name = "vangers"
version = "0.1.0"
authors = ["kvark", "caiiiycuk"]
edition = "2018"
default-run = "convert"
publish = false

[workspace]
members = [
    "lib/m3d",
    "lib/splay",
    "lib/tiff",
]

[profile.release]
opt-level = 'z'
lto = true
debug = false

[lib]

[[bin]]
name = "convert"
path = "bin/convert/main.rs"

[dependencies]
# internals
m3d = { path = "lib/m3d" }
splay = { path = "lib/splay" }
tiff = { path = "lib/tiff" }
# library
bytemuck = "1"
byteorder = "1.0"
cgmath = { version = "0.18", features = ["rand"] }
futures = "0.3"
# glsl-to-spirv = "0.1"
log = "0.4"
rand = "0.8"
rayon = "1"
ron = "0.6"
rust-ini = "0.17"
serde = "1.0"
serde_derive = "1.0"
serde_scan = "0.4"
wgpu = "0.9"
# binaries
env_logger = "0.8"
getopts = "0.2"
obj = "0.10"
png = "0.16"
# wasm
wasm-bindgen = "0.2.74"
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.getrandom]
features = ["js"]