[package]
name = "m3d"
version = "0.1.0"
workspace = "../.."
authors = ["Dzmitry Malyshau <kvarkus@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.0"
log = "0.4"
ron = { git = "https://github.com/ron-rs/ron", rev = "6e96c3beef8f22059cbd53e1216a894336410fc1" }
profiling = "1.0"
serde = { version = "1.0", features = ["serde_derive"] }
